k8s/argocd-homelab/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: haugene/transmission-openvpn:5.2
          ports:
            - containerPort: 9091
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: config
              mountPath: /data
            - name: torrents
              mountPath: /torrents
            - name: media
              mountPath: /media
            - name: dev-tun
              mountPath: /dev/net/tun
      volumes:
        - name: config
          hostPath:
            path: /var/data/configs/transmission
            type: DirectoryOrCreate
        - name: torrents
          hostPath:
            path: /var/data/torrents
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /var/data/media
            type: DirectoryOrCreate
        - name: dev-tun
          hostPath:
            path: /dev/net/tun
