k8s/argocd-homelab/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9091
      protocol: TCP
  selector:
    app: transmission
