k8s/argocd-homelab/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  ingressClassName: cilium
  rules:
    - host: transmission.peterstorm.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 80
